# InferFlow

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml  test_db.py
apps/chat-service/: Dockerfile  pyproject.toml
apps/chat-service/app/: config.py  main.py  schemas.py
apps/chat-service/app/api/: chat.py  conversations.py  deps.py  health.py  models.py
apps/chat-service/app/db/: engine.py  models.py
apps/chat-service/app/domain/: models.py
apps/chat-service/app/repositories/: base.py  memory.py  postgres.py
apps/chat-service/app/routers/: chat.py  health.py
apps/chat-service/app/schemas/: chat.py  conversation.py
apps/chat-service/app/services/: chat_service.py  conversation_service.py
apps/chat-service/app/streaming/: manager.py
apps/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: client.ts  monitoringClient.ts
apps/frontend/src/components/: ChatView.tsx  Dashboard.tsx  MessageBubble.tsx  Sidebar.tsx
apps/ingestion-worker/: Dockerfile  pyproject.toml
apps/ingestion-worker/worker/: config.py  consumer.py  main.py  processor.py
apps/ingestion-worker/worker/db/: engine.py  models.py  repositories.py
apps/ingestion-worker/worker/pipeline/: redactor.py  validator.py
apps/monitoring-service/: Dockerfile  pyproject.toml
apps/monitoring-service/app/: config.py  main.py  models.py
apps/monitoring-service/app/routers/: health.py  monitoring.py  websocket.py
apps/monitoring-service/app/services/: connection_manager.py  consumer.py  metrics_manager.py  sse_broadcaster.py
infrastructure/init-db/: 01-init.sql
