[project]
name = "inferflow-ingestion-worker"
version = "0.1.0"
description = "Async ingestion worker — consumes inference events from Redis Streams"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "inferflow-shared",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.uv.sources]
inferflow-shared = { workspace = true }
